--- a/package.json
+++ b/package.json
@@ -10,7 +10,12 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/react": "^2.2.1",
+    "@types/react": "^18.0.21",
+    "@types/react-dom": "^18.0.6",
     "astro": "^2.9.7",
-    "firebase": "^10.1.0"
+    "firebase": "^10.1.0",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0"
   }
 }
