--- a/package.json
+++ b/package.json
@@ -11,14 +11,18 @@
   },
   "dependencies": {
     "@astrojs/react": "^2.2.1",
+    "@astrojs/svelte": "^3.1.0",
     "@astrojs/tailwind": "^4.0.0",
     "@types/react": "^18.0.21",
     "@types/react-dom": "^18.0.6",
     "astro": "^2.9.7",
+    "blurhash": "^2.0.5",
     "firebase": "^10.1.0",
     "framer-motion": "^10.15.0",
     "react": "^18.0.0",
+    "react-blurhash": "^0.3.0",
     "react-dom": "^18.0.0",
+    "svelte": "^4.0.0",
     "tailwindcss": "^3.0.24"
   }
 }
